--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
         <item>Vidro</item>
         <item>Organico</item>
     </string-array>
+    <string name="title_activity_maps">Mapa</string>
 
 
 </resources>
